# graphs

./: CMakeLists.txt
include/: app.h  common.h  geometry.h  graph.h  graphs.h  list.h  plotter.h  vector_main.h
src/: app.cpp  common.cpp  geometry.cpp  graph.cpp  graphs.cpp  list.cpp  main.cpp  plotter.cpp  test.cpp
